--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "element-ui": "^1.0.2",
     "fs-extra": "^1.0.0",
     "lowdb": "^0.14.0",
+    "uuid": "^3.0.1",
     "vue": "^2.0.1",
     "vue-electron": "^1.0.0",
     "vue-router": "^2.0.0"
