--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .DS_Store
 app/dist/index.html
 app/dist/build.js
+app/dist/fonts/*
+app/dist/imgs/*
+app/dist/styles.css
 builds/*
 node_modules
 npm-debug.log
