--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "element-ui": "^1.0.2",
     "fs-extra": "^1.0.0",
     "lowdb": "^0.14.0",
+    "moment": "^2.17.1",
     "node-schedule": "^1.2.0",
     "node-uuid": "^1.4.7",
     "vue": "^2.0.1",
