Add build option for ARM and update docs

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "build": "node tasks/release.js",
     "build:clean": "cross-env PLATFORM_TARGET=clean node tasks/release.js",
-    "build:darwin": "cross-env PLATFORM_TARGET=darwin node tasks/release.js",
-    "build:linux": "cross-env PLATFORM_TARGET=linux node tasks/release.js",
-    "build:mas": "cross-env PLATFORM_TARGET=mas node tasks/release.js",
-    "build:win32": "cross-env PLATFORM_TARGET=win32 node tasks/release.js",
+    "build:darwin": "cross-env PLATFORM_TARGET=darwin ARCH_TARGET=x64 node tasks/release.js",
+    "build:linux": "cross-env PLATFORM_TARGET=linux ARCH_TARGET=x64 node tasks/release.js",
+    "build:arm": "cross-env PLATFORM_TARGET=linux ARCH_TARGET=armv7l node tasks/release.js",
+    "build:mas": "cross-env PLATFORM_TARGET=mas ARCH_TARGET=x64 node tasks/release.js",
+    "build:win32": "cross-env PLATFORM_TARGET=win32 ARCH_TARGET=x64 node tasks/release.js",
     "dev": "node tasks/runner.js",
     "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter app",
     "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix app",
