--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "element-ui": "^1.0.2",
     "fs-extra": "^1.0.0",
-    "lowdb": "^0.14.0",
+    "lowdb": "^0.16.0",
     "moment": "^2.17.1",
     "node-schedule": "^1.2.0",
     "node-uuid": "^1.4.7",
@@ -14,5 +14,5 @@
     "vue-electron": "^1.0.0",
     "vue-router": "^2.0.0"
   },
-  "author": "mikhaildelport <mikhail@delport.ca>"
+  "author": "Mikhail Delport <mikhail@delport.ca>"
 }
