--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron": "^1.3.1",
     "electron-devtools-installer": "^1.1.4",
     "electron-packager": "^8.0.0",
+    "electron-prebuilt": "^1.2.1",
     "electron-rebuild": "^1.1.3",
     "eslint": "^2.10.2",
     "eslint-config-standard": "^5.1.0",
